[package]
name = "magical-hell"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = ["bevy/wayland"]

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.26.0"
bevy_rapier2d = { version = "0.27.0", features = ["parallel", "simd-stable"] }
rand = "0.8.5"
