[package]
name = "magical-hell"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = ["bevy/wayland"]

[dependencies]
bevy = { version = "0.14.2", features = ["async-io", "dynamic_linking"] }
bevy_rapier2d = { version = "0.27.0", features = ["parallel", "simd-stable"] }
bevy-inspector-egui = "0.27.0"
bevy_egui = "0.30.0"
mlua = { version = "0.9.9", features = [
  "async",
  "lua54",
  "macros",
  "send",
  "serialize",
] }
rand = "0.8.5"
serde = "1.0.210"
